# side_projects

./: devbox.json  pyproject.toml
AI_Agent/: app.py  temp_output.json
aws_dms_/db_test/: check_data.py  insert_data.py
aws_dms_/infra/: main.tf  rds.tf  sg.tf  subnet.tf  terraform.tfstate  vpc.tf
confluencedb_to_slack/: .gitignore  .terraform.lock.hcl  event_bridge.tf  lambda.tf  lambda_layer.tf  main.tf
confluencedb_to_slack/lambda_aws_km/: main.py
confluencedb_to_slack/lambda_sup_km/: main.py
notiondb_to_slack/: .terraform.lock.hcl  event_bridge.tf  lambda.tf  lambda_layer.tf  main.tf  secret_manager.tf
notiondb_to_slack/lambda/: main.py
sup_daily/: .gitignore  README.md  Taskfile.yaml  pyproject.toml
sup_daily/aws-nuke/: .gitignore  README.md  aws-nuke.py  log_to_csv.py  pre-aws-nuke.py  unqualified_tag.py
sup_daily/aws-nuke/gc-ai-module/: config.yaml
sup_daily/aws-nuke/gc-playground/: config.yaml
sup_daily/aws-nuke/gc-sandbox/: config.yaml
sup_daily/sast/: .gitignore  README.md  clean_sast.py  clone_esb.py  get_checkov_index.py  script_for_task.py  streamlit.py
sup_daily/scan_securityhub/: README.md  main.py
