[project]
name = "sup-daily"
version = "0.1.0"
description = ""
authors = [
    {name = "henrylee",email = "henrylee@going.cloud"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "go-task-bin (>=3.42.1,<4.0.0)",
    "boto3 (>=1.37.29,<2.0.0)",
    "awscliv2 (>=2.3.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
